policies/combined_policies_constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPolicies
metadata:
  name: enforce-policies
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - gatekeeper-system
  parameters:
    allowedRegistries: ["gcr.io/", "docker.io/"]
